# memly

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.github/workflows/: CheckClangFormat.yml  CheckClangTidy.yml  check-clang-format.yml  check-clang-tidy.yml  clang-format-check.yml
core/include/repetition_ai/: deck.hpp  flashcard.hpp
src/: main.cpp
src/App/: Error.cpp  SqlResource.cpp  main.cpp
src/Common/: Files.cpp  Files.hpp  Paths.cpp  Paths.hpp  Utility.cpp  Utility.hpp
src/Core/: DeckCardService.cpp  DeckCardService.hpp  LanguageTranslator.cpp  LanguageTranslator.hpp
src/Database/: DatabaseFactory.cpp  DatabaseFactory.hpp  DatabaseInterface.hpp  DuckDB.cpp  DuckDB.hpp  DuckDb.cpp  DuckDb.hpp
src/Database/SQL/: Schema.sql
src/Database/Sql/: Schema.sql
src/DuckDB/: Database.cpp  Database.hpp  DeckRow.hpp  FlashcardRow.hpp  MigrationsRow.hpp  SettingsRow.hpp
src/DuckDB/SQL/: Schema.sql
src/DuckDatabase/: Database.hpp
src/Qt/: AppData.cpp  AppData.hpp  AppEngine.cpp  AppEngine.hpp  AppQmlResource.cpp  AppResources.cpp  AppResources.hpp  AppSqlResource.cpp  AppSupportData.cpp  AppSupportData.hpp  QmlResource.cpp  QmlResource.hpp  SqlResource.cpp  SqlResource.hpp
src/Qt/App/: AppEngine.cpp  AppEngine.hpp  AppError.hpp  AppQmlResource.hpp  AppSqlResource.hpp  Engine.cpp  Engine.hpp  SqlResource.cpp
src/Qt/Qml/: MainWindow.qml
src/QtApp/: AppEngine.cpp  AppError.cpp  AppQmlResource.cpp
src/QtDatabase/: Database.cpp  Database.hpp  FlashcardRow.hpp
src/QtGUI/: AppEngine.cpp  AppEngine.hpp
src/QtGUI/Assets/: Memly.icns
src/QtGUI/QML/: Main.qml
src/QtGui/: AppEngine.cpp  AppEngine.hpp  Paths.cpp  Paths.hpp
src/QtQml/: MainWindow.qml
src/Sql/Migrations/: Schema.sql
src/TableDataGateway/: CardStore.cpp  CardStore.hpp  DeckStore.cpp  DeckStore.hpp  SettingsStore.cpp  SettingsStore.hpp
src/TransactionScripts/: DomainError.hpp
src/Utility/: Unrecoverable.cpp  Unrecoverable.hpp
src/app/: deck.hpp  flashcard.hpp  main.cpp
src/common/: Types.hpp
src/database/: Database.hpp  DeckRecord.hpp  FlashCardRecord.hpp
src/database_qt/: DatabaseQt.cpp  DatabaseQt.hpp  DeckRecord.hpp  DeckRow.hpp  FlashCardRecord.hpp  FlashcardRow.hpp  SettingsRecord.hpp  SettingsRow.hpp
src/gui/: App.cpp  App.hpp  Paths.cpp  Paths.hpp
src/gui/qml/: Main.qml
src/models/: Deck.hpp  FlashCard.hpp  Settings.hpp
src/repository/: CardStore.cpp  CardStore.hpp  DeckStore.cpp  DeckStore.hpp  SettingsStore.cpp  SettingsStore.hpp  UserSettingsStore.hpp
src/services/: CardStore.hpp  DeckCardService.cpp  DeckCardService.hpp  LanguageTranslator.cpp  LanguageTranslator.hpp
src/util/: Util.hpp
test/: TestAppData.cpp  TestAppData.hpp  TestAppSqlResource.cpp  TestAppSqlResource.hpp  TestAppSupportData.cpp  TestAppSupportData.hpp  TestDatabase.cpp  TestSqlResource.cpp  TestSqlResource.hpp  test.duckdb
test/TestApp/: SqlResource.cpp  SqlResource.hpp  SupportData.cpp  SupportData.hpp
ui_qt/src/: main.cpp
